--- a/app/views/apw/entries/index.html.erb
+++ b/app/views/apw/entries/index.html.erb
@@ -75,37 +75,56 @@
                   <br>
                   <strong><%= story.status_display %></strong>
                   <br>
-                  <strong>
-                    <%= link_to_if story.time_crowd_id.present?,
+                  <%# <strong> %>
+                    <%# <%= link_to_if story.time_crowd_id.present?,
                       story.total_time,
                       "https://timecrowd.net/app/tasks/#{story.time_crowd_id}/edit",
                       target: "_blank"
                     %>
-                  </strong>
+                  <%# </strong> %>
                   <% unless story.timecrowd_est_ratio.zero? %>
                     <div class="progress-container">
                       <div class="progress-text">0%</div>  <!-- Text luôn ở giữa -->
                       <div class="progress-bar"></div>
                     </div>
                   <% end %>
-                  <% if story.time_crowd_task_content&.dig("users") %>
+                  <% if story.time_crowd_tasks.present? %>
                     <div class="fire tooltip-target">
                       <%= image_tag "fire.gif", alt: "fire", class: "fire-icon" %>
-
                       <div class="smoke"></div>
                       <div class="smoke"></div>
                       <div class="smoke"></div>
                     </div>
-                    <%# <div class="fire tooltip-target" data-tooltip="tooltip-table">🔥</div> %>
+                    <div class="fire tooltipx-target" data-tooltip="tooltip-table"></div>
                     <div class="tooltip">
                       <table class="tooltip-table">
-                        <% story.time_crowd_task_content.dig("users").each do |user| %>
-                          <tr>
-                              <td>
-                                <img src="<%= user["avatar_url"] %>" class="avatar"></td>
+                        <% time_crowd_est = story.time_crowd_est %>
+                        <% story.time_crowd_tasks.order(:activity_type).each do |time_crowd_task| %>
+                          <tr class="parent-row">
+                            <td class="toggle-arrow">▼</td>
+                            <td>
+                              <%= link_to time_crowd_task.activity_type,
+                                "https://timecrowd.net/app/tasks/#{time_crowd_task.time_crowd_id}/edit",
+                                target: "_blank" %>
+                            </td>
+                            <td><%= time_crowd_task.total_time %></td>
+                            <td>
+                              <% if time_crowd_est[time_crowd_task.activity_type].zero? %>
+                                0%
+                              <% else %>
+                                <%= time_crowd_task.total_second / (time_crowd_est[time_crowd_task.activity_type] * 3600) * 100 %>%
+                              <% end %>
+                            </td>
+                          </tr>
+
+                          <% time_crowd_task.content.dig("users").each do |user| %>
+                            <tr class="hidden-row">
+                              <td><img src="<%= user["avatar_url"] %>" class="avatar"></td>
                               <td><%= user["nickname"] %></td>
                               <td><%= user["total_time"] %></td>
-                          </tr>
+                            </tr>
+                          <% end %>
+
                         <% end %>
                       </table>
                     </div>
@@ -221,6 +240,18 @@
         } else {
           tooltip.fadeOut(200);
           $(this).data('active', 0)
+        }
+      });
+
+      $(".toggle-arrow").click(function(){
+        // Tìm các hàng con tiếp theo và toggle hiển thị
+        $(this).closest("tr").nextUntil(".parent-row").toggle();
+
+        // Đổi mũi tên ▼ <-> ▲
+        if ($(this).text() === "▼") {
+          $(this).text("▲");
+        } else {
+          $(this).text("▼");
         }
       });
     });
