--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
     <div class="nav-links">
         <%= link_to "Home", apw_root_path %>
         <%= link_to "Report", apw_reports_path %>
+        <%= link_to "Timecrowd", apw_timecrowds_path %>
     </div>
     <div class="search-container">
       <input type="text" id="search" placeholder="Search stories">
